# abacus-approximation

./: README.md
benchmarks/: block.c  block.graph  fir.c  fir.graph  perceptron.graph
benchmarks/inputs/: blockRandomGenerator.m  block_input1.txt  block_input2.txt  block_input3.txt  block_input4.txt  block_input5.txt  block_input6.txt  firRandomGenerator.m  fir_input1.txt  fir_input2.txt  fir_input3.txt  fir_input4.txt  fir_input5.txt  fir_input6.txt  perceptronRandomGenerator.m  perceptron_input1.txt  perceptron_input2.txt  perceptron_input3.txt  perceptron_input4.txt  perceptron_input5.txt  perceptron_input6.txt
src/: .gitignore  CMakeLists.txt  abacus.cpp  advanced_executer.cpp  advanced_operation_generator.cpp  approximated_graph.cpp  approximation.cpp  compiled_abacus.cpp  edge.cpp  executed_graph.cpp  executer.cpp  executer_compilation.cpp  fast_writer.cpp  graph.cpp  main.cpp  main_advanced_compilation.cpp  main_compiled.cpp  main_repetition.cpp  node.cpp  operation_generator.cpp  operations.c  parser.c  parser.cpp  report.cpp  syntax.cpp  utility.cpp  writer.cpp
src/include/: abacus.h  advanced_executer.h  advanced_operation_generator.h  approximated_graph.h  approximation.h  compiled_abacus.h  edge.h  executed_graph.h  executer.h  executer_compilation.h  fast_writer.h  graph.h  node.h  operation_generator.h  operations.h  parser.h  report.h  syntax.h  utility.h  writer.h
src/test/: CMakeLists.txt  benchmark.graph  complex_benchmark.graph  test_approximated_graph.cpp  test_approximation.cpp  test_control_structure.cpp  test_execution.cpp  test_graph.cpp  test_selection.cpp
